Added more to the site, including text, images, pdf, and a fun crt filter.

--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <title>Home</title>
+    <title>Resumé</title>
     <head>
         <link rel="stylesheet" href="style.css">
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -9,11 +9,10 @@
         
         <div class ="topnav flex justify-between items-center">
             <div>
-                <a class="active" href="index.html">V</a>
-                <a href="resume.html">Resumé</a>
+                <a href="index.html">V</a>
+                <a class="active" href="resume.html">Resumé</a>
                 <a href="web.html">Web Projects</a>
                 <a href="https://github.com/Ora5">GitHub</a>
-
             </div>
             <div class = "flex items-center">
                 <span class = "font-mono text-white items-center mr-1">CRT Toggle:</span>
@@ -25,12 +24,10 @@
         </div>
 
         <main class="mt-14 font-mono font-bold text-center">
-            <h1 class="mb-5">Hello! I am Ora Martindale V.</h1>
-            <img src="docs/main_photo.jpg" alt="Me at Grand Tetons National Park" class="mx-auto object-cover border-white border-5 shadow-xl/50 object-center h-128 w-192">
-            <p class="mx-40 mt-5 mb-14">
-                I am a Senior in Computer Engineering at Missouri University of Science and Technology!
-                Feel Free to have a look around my site, you can check out my resumé, web projects, and GitHub on the nav bar above!
-            </p>
+            <h1>Here is My Resumé:</h1>
+            <object data="docs/Ora_Martindale_V_Resume.pdf" type="application/pdf" width="75%" height="500px" class="mx-auto">
+                <p>Unable to Display PDF. <a href="docs/Ora_Martindale_V_Resume.pdf">Download</a> Instead</p>
+            </object>
         </main>
     </body>
     <script src="site.js"></script>
