--- a/web.html
+++ b/web.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <title>Home</title>
+    <title>Web Projects</title>
     <head>
         <link rel="stylesheet" href="style.css">
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -9,9 +9,9 @@
         
         <div class ="topnav flex justify-between items-center">
             <div>
-                <a class="active" href="index.html">V</a>
+                <a href="index.html">V</a>
                 <a href="resume.html">Resumé</a>
-                <a href="web.html">Web Projects</a>
+                <a class="active" href="web.html">Web Projects</a>
                 <a href="https://github.com/Ora5">GitHub</a>
 
             </div>
@@ -25,12 +25,6 @@
         </div>
 
         <main class="mt-14 font-mono font-bold text-center">
-            <h1 class="mb-5">Hello! I am Ora Martindale V.</h1>
-            <img src="docs/main_photo.jpg" alt="Me at Grand Tetons National Park" class="mx-auto object-cover border-white border-5 shadow-xl/50 object-center h-128 w-192">
-            <p class="mx-40 mt-5 mb-14">
-                I am a Senior in Computer Engineering at Missouri University of Science and Technology!
-                Feel Free to have a look around my site, you can check out my resumé, web projects, and GitHub on the nav bar above!
-            </p>
         </main>
     </body>
     <script src="site.js"></script>
